[package]
name = "auctionhouse"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "auctionhouse"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.20.1"
anchor-spl = {version = "0.20.1"}
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}
solana-program = "=1.9.5"
spl-associated-token-account = "1.0.3"
tiny-keccak = {version = "2.0.2", features = ["keccak"]}
